templatesdir=@LXCTEMPLATEDIR@

templates_SCRIPTS = \
	lxc-alpine \
	lxc-altlinux \
	lxc-archlinux \
	lxc-busybox \
	lxc-centos \
	lxc-cirros \
	lxc-debian \
	lxc-download \
	lxc-fedora \
	lxc-gentoo \
	lxc-openmandriva \
	lxc-opensuse \
	lxc-oracle \
	lxc-plamo \
	lxc-sshd \
	lxc-ubuntu \
	lxc-ubuntu-cloud
