templatesdir=@LXCTEMPLATEDIR@

templates_SCRIPTS = \
	lxc-alpine \
	lxc-altlinux \
	lxc-archlinux \
	lxc-busybox \
	lxc-centos \
	lxc-cirros \
	lxc-debian \
	lxc-download \
	lxc-fedora \
	lxc-fedora-legacy \
	lxc-gentoo \
	lxc-oci \
	lxc-openmandriva \
	lxc-opensuse \
	lxc-oracle \
	lxc-plamo \
	lxc-pld \
	lxc-slackware \
	lxc-sshd \
	lxc-ubuntu \
	lxc-ubuntu-cloud \
	lxc-sparclinux \
	lxc-voidlinux \
	lxc-sabayon
