templatesconfigdir=@LXCTEMPLATECONFIG@

EXTRA_DIST = common.seccomp

SUBDIRS = common.conf.d

templatesconfig_DATA = \
	alpine.common.conf \
	alpine.userns.conf \
	archlinux.common.conf \
	archlinux.userns.conf \
	centos.common.conf \
	centos.userns.conf \
	common.conf \
	common.seccomp \
	debian.common.conf \
	debian.userns.conf \
	fedora.common.conf \
	fedora.userns.conf \
	gentoo.common.conf \
	gentoo.moresecure.conf \
	gentoo.userns.conf \
	nesting.conf \
	opensuse.common.conf \
	opensuse.userns.conf \
	oracle.common.conf \
	oracle.userns.conf \
	plamo.common.conf \
	plamo.userns.conf \
	slackware.common.conf \
	slackware.userns.conf \
	ubuntu-cloud.common.conf \
	ubuntu-cloud.lucid.conf \
	ubuntu-cloud.userns.conf \
	ubuntu.common.conf \
	ubuntu.lucid.conf \
	ubuntu.userns.conf \
	openwrt.common.conf \
	sparclinux.common.conf \
	sparclinux.userns.conf \
	userns.conf
