EXTRA_DIST = $(pkgexamples_DATA)

if ENABLE_EXAMPLES
pkgexamplesdir=$(docdir)/examples

pkgexamples_DATA = \
	lxc-macvlan.conf \
	lxc-no-netns.conf \
	lxc-empty-netns.conf \
	lxc-phys.conf \
	lxc-veth.conf \
	lxc-complex-config
endif

noinst_DATA = \
	lxc-macvlan.conf.in \
	lxc-empty-netns.conf.in \
	lxc-no-netns.conf.in \
	lxc-phys.conf.in \
	lxc-veth.conf.in \
	lxc-complex-config.in
