if ENABLE_EXAMPLES
pkgexamplesdir=$(docdir)/examples

pkgexamples_DATA = \
	lxc-macvlan.conf \
	lxc-vlan.conf \
	lxc-no-netns.conf \
	lxc-empty-netns.conf \
	lxc-phys.conf \
	lxc-veth.conf \
	lxc-complex.conf \
	seccomp-v1.conf \
	seccomp-v2-blacklist.conf \
	seccomp-v2.conf
endif

noinst_DATA = \
	lxc-macvlan.conf.in \
	lxc-vlan.conf.in \
	lxc-empty-netns.conf.in \
	lxc-no-netns.conf.in \
	lxc-phys.conf.in \
	lxc-veth.conf.in \
	lxc-complex.conf.in \
	seccomp-v1.conf \
	seccomp-v2-blacklist.conf \
	seccomp-v2.conf

EXTRA_DIST = \
	seccomp-v1.conf \
	seccomp-v2-blacklist.conf \
	seccomp-v2.conf
