lib_LIBRARIES = liblxc.a
pkginclude_HEADERS = lxc.h
liblxc_a_SOURCES = \
	create.c \
	destroy.c \
	start.c \
	stop.c \
	execute.c \
	monitor.c \
	kill.c \
	state.c \
	freezer.c \
	cgroup.c cgroup.h \
	lxc.h \
	utils.h \
	lock.c lock.h \
	namespace.h \
	network.c network.h \
	conf.c conf.h \
	list.h \
	state.c state.h \
	log.c log.h \
	\
        nl.c nl.h \
        rtnl.c rtnl.h \
        genl.c genl.h
