lib_LIBRARIES = liblxc.a
pkginclude_HEADERS = \
		lxc.h \
		lxc_cgroup.h \
		lxc_conf.h \
		lxc_list.h \
		lxc_lock.h \
		lxc_log.h \
		lxc_namespace.h \
		lxc_state.h \
		lxc_utils.h

liblxc_a_SOURCES = \
	create.c \
	destroy.c \
	start.c \
	stop.c \
	execute.c \
	monitor.c \
	kill.c \
	freezer.c \
	lxc_state.c lxc_state.h \
	lxc_cgroup.c lxc_cgroup.h \
	lxc.h \
	lxc_utils.h \
	lxc_lock.c lxc_lock.h \
	lxc_namespace.h \
	lxc_conf.c lxc_conf.h \
	lxc_list.h \
	lxc_state.c lxc_state.h \
	lxc_log.c lxc_log.h \
	\
	network.c network.h \
        nl.c nl.h \
        rtnl.c rtnl.h \
        genl.c genl.h
